# ChangeLog for app-office/imposter
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/imposter/ChangeLog,v 1.16 2011/03/13 19:54:43 suka Exp $

  13 Mar 2011; Andreas Proschofsky <suka@gentoo.org> -imposter-0.2.ebuild,
  imposter-0.3.ebuild:
  Fix gtk+-2 dependency, clean up the ebuild a bit

  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  22 May 2008; Markus Meier <maekke@gentoo.org> imposter-0.3.ebuild:
  x86 stable, bug #222771

  19 May 2008; nixnut <nixnut@gentoo.org> imposter-0.3.ebuild:
  Stable on ppc wrt bug 222771

  19 May 2008; Samuli Suominen <drac@gentoo.org> imposter-0.2.ebuild,
  imposter-0.3.ebuild:
  Move pkgconfig to DEPEND. Keyword ~amd64. Install documentation.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  19 Jan 2007; Charlie Shepherd <masterdriverz@gentoo.org>
  imposter-0.2.ebuild:
  QA: remove invalid RESTRICT="mirror"

  19 Jan 2006; Andreas Proschofsky <suka@gentoo.org> imposter-0.2.ebuild,
  imposter-0.3.ebuild:
  No need to depend on virtual/x11, gtk+ does that for us. Also fixes modular
  X deps.

*imposter-0.3 (27 Oct 2005)

  27 Oct 2005; Andreas Proschofsky <suka@gentoo.org>
  +files/imposter-0.3-ignore-modifiers.patch, +imposter-0.3.ebuild:
  Update to the latest release, closes bug #87889

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  imposter-0.2.ebuild:
  Masked imposter-0.2.ebuild stable for ppc

*imposter-0.2-r1 (15 Aug 2004)

  15 Aug 2004; Jon Hood <squinky86@gentoo.org> +imposter-0.2-r1.ebuild,
  imposter-0.2.ebuild:
  Stable on x86, add iksemel USE flag with an -r bump.

  18 Jun 2004; David Holm <dholm@gentoo.org> imposter-0.2.ebuild:
  Added to ~ppc.

*imposter-0.2 (15 Jun 2004)

  15 Jun 2004; Jon Hood <squinky86@gentoo.org> +metadata.xml,
  +imposter-0.2.ebuild: