@@ -1,5 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 AUX imposter-0.3-ignore-modifiers.patch 695 RMD160 f4d23cdf1299cd7915688f396bf65c596f148a13 SHA1 d6363b358ea7808687274e5020ce002441b1a1dd SHA256 ca984b39350c1c40541f23578cae4d7f5e2fd461d64f25a48844d835bd204c74
 DIST imposter-0.3.tar.gz 169592 RMD160 7e01b354fe28db286e3bfdc1499f077e1c8afac6 SHA1 70ebda94cd62dcc65c9c53a4c7cb420f4b8b694b SHA256 53b67c08477623bb03436f79bf2ca859d7cd9684c57775ea539e1db449658236
-EBUILD imposter-0.3.ebuild 1078 RMD160 2e766b95415b178f088c36dd13dc021023650c0b SHA1 cacdf88882beddd1266ff567b9378e37b44134e5 SHA256 bf4a93257410855fedf7ea62ad10fca6815cead7ecf4050af10a49a136103b41
-MISC ChangeLog 2093 RMD160 653aa258e3c0bd237d6e9453ed03e1bc3a8ef25f SHA1 1e86120e42184d6da89bd9195ba0d556850762fd SHA256 511b271bbeb0b73f70017ef84aaaf6e390544e685201086d7fd38ced607a8536
+EBUILD imposter-0.3.ebuild 1076 RMD160 1740c6c9863052b411a4eb2c1fca4fd2d87881cb SHA1 604f0b6b49bb2a1ff0d529edca1285e1ed4d220d SHA256 a9f6c64f8f2099d20f34ee016a7921e889d9127d849d926a5c6fe6ce81ab09fa
+MISC ChangeLog 2199 RMD160 c34ae11d689954960da51e111caff6f6b6f3171d SHA1 b0d254f6c9fc25b354112b62bf76d29caa4973bd SHA256 6b33a731bb943a89f992c9555e2a1abb74c67058fba1c91e3ab1424bd5091586
 MISC metadata.xml 270 RMD160 42c1246314291ebd6c1169da40a6edde8cf38332 SHA1 28a3167a94486a6deeaffe7080954d3d891830d6 SHA256 cdd9b8ab5560425d375f6edf30098236d39f6f8b56ba64dc9422786a62b15912
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQEcBAEBCgAGBQJPFAfAAAoJEOTDgjZ80txdqt4IAJwLtFqWkHQkbAJ5My/66wEe
+kaoiSje+kYNgyp7HSH4Gj37NnFtOVd+36O5OaknhcySja4nrgPlF7UJF3TWKC0Kn
+QwyqBAOwDzgtakonC+kpZj9MOEvbW41NI5aAn8Jc9Sit+yP/uDE4rixcEFraC9CF
+/yzsURPXP35W31qBx+GEZkrf+LfK8PcQJNJ+VtOaZpHY0Pd63SMyUu2xOZDYFj66
+kpyY1Del7CjoZOrxMQLtYISo7mXmSnAHB4zumMpjFmazCaJZKLnzu+RpRZsR466A
+xs8RADP7eXwT2N077Bmw7/z88myO0y8VLNwvV1Dbdc8z6Zf01pYuwA/hgqiqAow=
+=YxKM
+-----END PGP SIGNATURE-----
