@@ -1,6 +1,9 @@
 # ChangeLog for app-office/imposter
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/imposter/ChangeLog,v 1.16 2011/03/13 19:54:43 suka Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-office/imposter/ChangeLog,v 1.17 2012/01/16 11:19:22 ago Exp $
+
+  16 Jan 2012; Agostino Sarubbo <ago@gentoo.org> imposter-0.3.ebuild:
+  Stable for amd64, wrt bug #398521
 
   13 Mar 2011; Andreas Proschofsky <suka@gentoo.org> -imposter-0.2.ebuild,
   imposter-0.3.ebuild:
